test/2/type/label-extraneous.err
type error: test/2/type/label-extraneous.ploy:3:14-23: argument field #0 has label `i`; expected no label.
  actual type:   (i:Int j:Int);
  expected type: (Int Int).
| main = exit.f(i=0 j=0)
               ~~~~~~~~~
